deploy/kustomize/blog-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: blog
  name: blog
  namespace: default
spec:
  selector:
    matchLabels:
      app: blog
  template:
    metadata:
      labels:
        app: blog
    spec:
      containers:
      - image: ghcr.io/reberp/personal-blog
        imagePullPolicy: Always
        name: blog
  replicas: 1
