deploy/kustomize/blog-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: blog
  name: blog
  namespace: default
spec:
  ports:
  - port: 80
    name: http
    protocol: TCP
    targetPort: 80
  - port: 443
    name: https
    protocol: TCP
    targetPort: 8443
  selector:
    app: blog
  type: ClusterIP
